Working Configuration file in Asp.net core

--- a/asp_net_core/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/asp_net_core/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>560aab28-580c-4664-b767-b5624a140192</UserSecretsId>
   </PropertyGroup>
 
 
